valid_tests/arrays/test7.go
// Test: Simple variable assignment
func main() {
    var x int
    x = 1
}
